# cadence-budget

./: .gitignore  LICENSE  README.md
saas-starter/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  docker-compose.prod.yml  docker-compose.yml  manage.py  pyproject.toml
saas-starter/apps/budget/: admin.py  api.py  models.py  schemas.py  urls.py  views.py  waterfall.py
saas-starter/apps/budget/migrations/: 0001_initial.py  0002_projecttag_ltree.py  0003_partner_contact_fields.py  0004_category_code_and_parent.py  0005_project_remove_year_add_description.py
saas-starter/apps/core/: api.py  urls.py  views.py
saas-starter/apps/tenants/: admin.py  middleware.py  models.py  views.py
saas-starter/apps/tenants/migrations/: 0001_initial.py
saas-starter/apps/users/: admin.py  api.py  models.py  schemas.py  views.py
saas-starter/apps/users/migrations/: 0001_initial.py
saas-starter/config/: api.py  urls.py
saas-starter/config/settings/: base.py  development.py  production.py
saas-starter/locale/en/LC_MESSAGES/: django.mo  django.po
saas-starter/locale/fr/LC_MESSAGES/: django.mo  django.po
saas-starter/templates/: base.html
saas-starter/templates/budget/: categories.html  partner_form.html  partners.html  project_detail.html  project_form.html  project_settings.html  projects.html  waterfall_results.html
saas-starter/templates/core/: dashboard.html  index.html
saas-starter/templates/partials/: footer.html  htmx-test.html  navbar.html  user-menu.html
saas-starter/templates/tenants/: landing.html
saas-starter/templates/users/: login.html
(+1 files in other folders)
