[project]
name = "saas-starter"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "django>=5.1,<5.2",
    "django-ninja>=1.3,<2.0",
    "psycopg2-binary>=2.9",
    "python-dotenv>=1.0",
    "email-validator>=2.0",
    "Pillow>=11.0",
    "whitenoise>=6.8",
    "gunicorn>=23.0",
]

[dependency-groups]
dev = [
    "django-debug-toolbar>=4.0",
]

